--- a/now.json
+++ b/now.json
@@ -2,6 +2,10 @@
   "builds": [{
       "src": "*.html",
       "use": "@now/static"
+    },
+    {
+      "src": "*.css",
+      "use": "@now/static"
     }
   ]
 }
