--- a/now.json
+++ b/now.json
@@ -8,8 +8,8 @@
       "use": "@now/static"
     },
     {
-      "src": "main.js",
-      "use": "@now/node"
+      "src": "*.js",
+      "use": "@now/static"
     }
   ]
 }
